--- a/composer.json
+++ b/composer.json
@@ -36,6 +36,7 @@
         "hyperf/event": "1.1.*",
         "hyperf/exception-handler": "1.1.*",
         "hyperf/framework": "1.1.*",
+        "hyperf/graphql": "1.1.*",
         "hyperf/guzzle": "1.1.*",
         "hyperf/http-server": "1.1.*",
         "hyperf/logger": "1.1.*",
@@ -84,6 +85,10 @@
         "init-proxy": "init-proxy.sh"
     },
     "repositories": {
+        "h": {
+            "type": "path",
+            "url": "../../limingxinleo/hyperf/src/*"
+        },
         "packagist": {
             "type": "composer",
             "url": "https://mirrors.aliyun.com/composer"
