--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,10 @@
-APP_NAME=biz-skeleton
+APP_NAME=blog-api
 
 # Mysql
 DB_DRIVER=mysql
 DB_HOST=localhost
 DB_PORT=3306
-DB_DATABASE=hyperf
+DB_DATABASE=blog
 DB_USERNAME=root
 DB_PASSWORD=
 DB_CHARSET=utf8mb4
